<resources>
    <string name="app_name">SportScouting</string>

    <string name="hint_player">Player</string>
    <string name="hint_team">Team</string>
    <string name="hint_position">Position</string>
    <string name="button_addNewPlayer">Add New Player</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit_player">Edit player</string>
    <string name="cd_edit_player">Edit this player</string>

    <string name="cd_filter">Filter</string>
    <string name="filter_by_position">Filter by position</string>
    <string name="filters_apply">Apply</string>
    <string name="filters_clear">Clear</string>
    <string name="filters_cancel">Cancel</string>
    <string name="pos_goalkeeper">Goalkeeper</string>
    <string name="pos_defender">Defender</string>
    <string name="pos_midfielder">Midfielder</string>
    <string name="pos_forward">Forward</string>

    <string name="menu_delete_all">Delete all</string>
    <string name="dialog_delete_title">Are you sure?</string>
    <string name="dialog_delete_message">Do you really want to delete all players?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>

    <string name="button_delete_player">Delete player</string>
    <string name="dialog_delete_one_title">Are you sure you want to delete the player?</string>

    <string name="dashboard_title">Team Dashboard</string>
    <string name="dash_watched">Watched</string>

    <string name="menu_addSportscouting">Add</string>
    <string name="menu_cancelSportScouting">Cancel</string>

    <string name="hint_search_players">Search players</string>

    <string name="lineup_title">Lineup</string>
    <string name="lineup_hint">Tap a position to assign a player</string>
    <string name="lineup_no_players_title">No players available</string>
    <string name="lineup_no_players_detail">Add some players first from the main screen.</string>
    <string name="lineup_choose_player">Choose a player</string>
    <string name="lineup_gap_options">What do you want to do?</string>
    <string name="lineup_change_player">Change player</string>
    <string name="lineup_remove_player">Remove player</string>

    <string name="menu_toggle_theme">Toggle dark mode</string>

</resources>