<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.sportscouting.activities.SportScoutingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/player"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_player"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/team"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_team"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/position"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_position"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Player image -->
                <ImageView
                    android:id="@+id/imagePlayer"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/outline_account_circle_24"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="16dp"/>

                <!-- Button to choose image -->
                <Button
                    android:id="@+id/btnSelectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Image"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"/>

                <LinearLayout
                    android:id="@+id/actionsRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addNewPlayer"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="VisualLintButtonSize" />

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/button_delete_player"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/dangerRed" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>